--- a/src/components/BackgroundTitle/BackgroundTitle.module.scss
+++ b/src/components/BackgroundTitle/BackgroundTitle.module.scss
@@ -4,8 +4,9 @@ h1{
     text-transform: uppercase;
     color:variables.$dimmed-text;
     font-size: 5rem;
+    letter-spacing: 50px;
 
     position:absolute;
-    top: 14px;
+    top: 12px;
     z-index: -1;
 }
