--- a/src/components/TodoList/TodoList.module.scss
+++ b/src/components/TodoList/TodoList.module.scss
@@ -6,6 +6,9 @@
     list-style-type: none;
     font-size: 1.3rem;
     overflow:auto;
+    
+    scrollbar-gutter: stable;
+
 
     .todoItem{
         @include variables.shared-padding;
@@ -46,7 +49,6 @@
             }
         }
     }
-
 
     &::-webkit-scrollbar {
         width: 5px;
