feat: added/changed shared styles

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,7 @@ $sidebar-background:#FDFCF7 !default;
 $button-background:#49392A !default;
 $button-dimmed-background:#463C33 !default;
 $actions-background:#ABA49A !default;
-$todo-list-background:white !default;
+$main-background:white !default;
 
 $border-color:#F8F8F8 !default;
 
