--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,7 +3,7 @@
 .header{
     @include variables.shared-padding;
     background-color: variables.$header-background;
-    height: 15px;
+    height: 12px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 
@@ -11,13 +11,44 @@
     justify-content: space-between;
     align-items: center;
 
+    .tabsContainer{
+        list-style-type: none;
+        flex-grow: 1;
+
+        margin-inline:40px;
+
+        display: flex;
+        gap:20px;
+
+        .tabItem{
+            background-color: darken(variables.$main-background, 10);
+            padding-top: 5px;
+            padding-inline: 10px;
+            padding-bottom: 20px;
+            margin-bottom: -25px;
+
+            cursor: pointer;
+            min-width: 80px;
+
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+
+            text-decoration: none;
+            color:variables.$main-text;
+
+            &.active{
+                background-color: variables.$main-background;
+            }
+        }
+    }
+
     .circlesContainer{
         display: flex;
         gap: 7px;
 
         .circle{
-            width: 17px;
-            height: 17px;
+            width: 18px;
+            height: 18px;
             background-color: variables.$actions-background;
             border-radius: 100%
         }
