feat: added 404 page Not Found

--- a/src/components/BackgroundTitle/BackgroundTitle.module.scss
+++ b/src/components/BackgroundTitle/BackgroundTitle.module.scss
@@ -1,6 +1,6 @@
 @use "../../styles/variables";
 
-h1{
+.header{
     text-transform: uppercase;
     color:variables.$dimmed-text;
     font-size: 5rem;
