--- a/src/components/BackgroundTitle/BackgroundTitle.module.scss
+++ b/src/components/BackgroundTitle/BackgroundTitle.module.scss
@@ -9,4 +9,12 @@
     position:absolute;
     top: 12px;
     z-index: -1;
+
+    @media(max-width:720px){
+        letter-spacing: 30px;
+    }
+
+    @media(max-width:520px){
+        letter-spacing: 0px;
+    }
 }
