--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -10,6 +10,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
+    position: relative;
 
     .tabsContainer{
         list-style-type: none;
@@ -36,6 +38,8 @@
             text-decoration: none;
             color:variables.$main-text;
 
+            z-index: 10;
+
             &.active{
                 background-color: variables.$main-background;
             }
@@ -51,6 +55,20 @@
             height: 18px;
             background-color: variables.$actions-background;
             border-radius: 100%
+        }
+    }
+
+    .counter{
+        position: absolute;
+        right: 20px;
+
+        @media(max-width:600px){
+            background-color: variables.$header-background;
+            top: -40px;
+            right: 0;
+
+            padding: 4px 10px;
+            border-radius: 10px;
         }
     }
 }
