--- a/src/pages/TodoList/components/TodoList/TodoList.module.scss
+++ b/src/pages/TodoList/components/TodoList/TodoList.module.scss
@@ -11,6 +11,9 @@
     padding-block: 5px;
     padding-left: 5px;
 
+    
+    z-index: 20;
+
 
     .todoItem{
         @include variables.shared-padding;
