last fix: fixed active link path identifier

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -42,6 +42,14 @@
 
             &.active{
                 background-color: variables.$main-background;
+
+                &:hover{
+                    background-color: darken(variables.$main-background,5);
+                }
+            }
+
+            &:hover{
+                background-color: darken(variables.$main-background,25);
             }
         }
     }
