fix: ovelapping header

--- a/src/pages/TodoList/components/SideBar/SideBar.module.scss
+++ b/src/pages/TodoList/components/SideBar/SideBar.module.scss
@@ -12,6 +12,8 @@
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 
+    z-index: 20;
+
     .addForm{
         display: flex;
         flex-direction: column;
