--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -6,10 +6,14 @@
 
     border-radius: 5px;
     border:none;
-    padding-block: 13px;
+    height: 50px;
     cursor: pointer;
 
-    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 1.1rem;
     transition: background-color variables.$transition-duration;
 
     &:hover{
