--- a/src/pages/Feedback/FeedbackPage.module.scss
+++ b/src/pages/Feedback/FeedbackPage.module.scss
@@ -12,7 +12,7 @@
   grid-template-rows: 1fr 1fr;
   gap: 40px;
   width: 100%;
-
+  
   > :nth-child(2){
     border-right: 15px solid variables.$sidebar-background;
     border-top: 15px solid variables.$sidebar-background;
@@ -28,7 +28,7 @@
     border-bottom: 15px solid variables.$sidebar-background;
   }
 
-  @media(max-width: 1000px){
+  @media(max-width: variables.$layout-breakpoint-large){
     display: flex;
     flex-direction: column;
 
@@ -70,49 +70,27 @@
       font-size: 1.5rem;
       color: variables.$main-text;
       margin-bottom: 10px;
-    }
 
-    .formHighlighted{
-      color:variables.$dimmed-text;
+      .formHighlighted{
+        color:variables.$dimmed-text;
+      }
     }
   
     .label {
       font-weight: bold;
       color: variables.$main-text;
     }
-  
-    .input,
-    .textarea {
+    
+    .textareaElement {
       border: 2px solid variables.$border-color;
       border-radius: 5px;
       padding-block: 13px;
       padding-left: 10px;
       font-style: italic;
-      width: 100%;
-      box-sizing: border-box;
-      margin-bottom: 15px;
-  
-      &::placeholder {
-        color: lighten(variables.$main-text, 70);
-      }
-    }
-  
-    .textarea {
-      height: 100px;
       resize: none;
-    }
-  
-    .sendButton {
-      background-color: variables.$button-background;
-      color: variables.$white-text;
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background-color variables.$transition-duration;
-  
-      &:hover {
-        background-color: variables.$button-dimmed-background;
+      
+      &::placeholder{
+          color: lighten(variables.$main-text, 70);
       }
     }
   }
@@ -180,7 +158,7 @@
       color: variables.$button-background;
       font-weight: bold;
 
-      @media(max-width: 1000px){
+      @media(max-width: variables.$layout-breakpoint-large){
         top: 20px;
       }
     }
