feat: added error handling for feedback form

--- a/src/components/InputField/InputField.module.scss
+++ b/src/components/InputField/InputField.module.scss
@@ -5,9 +5,14 @@
   flex-direction: column;
   gap: 5px;
 
-  .label {
-    font-weight: bold;
-    color: variables.$main-text;
+  position: relative;
+  padding-top: 15px;
+
+  .error{
+    color: variables.$red-text;
+    position: absolute;
+    top: -7px;
+    padding-left: 10px;
   }
 
   .input {
