--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,4 +1,5 @@
 @use "../../styles/variables";
+@use 'sass:color';
 
 .button{
     background-color: variables.$button-background;
@@ -17,14 +18,14 @@
     transition: background-color variables.$transition-duration;
 
     &:hover{
-        background-color: darken(variables.$button-background, 5);
+        background-color: color.adjust($color:variables.$button-background, $lightness: -5%);
     }
 
     &.secondary{
-        background-color: lighten(variables.$button-background, 10);
+        background-color: color.adjust($color:variables.$button-background, $lightness: 10%);
 
         &:hover{
-            background-color: darken(variables.$button-background, 1);
+            background-color: color.adjust($color:variables.$button-background, $lightness: -1%);
         }
     }
 }
