--- a/src/components/InputField/InputField.module.scss
+++ b/src/components/InputField/InputField.module.scss
@@ -1,4 +1,5 @@
 @use "../../styles/variables";
+@use "sass:color";
 
 .inputField {
   display: flex;
@@ -23,7 +24,7 @@
     font-style: italic;
 
     &::placeholder{
-        color: lighten(variables.$main-text, 70);
+        color: color.adjust($color:variables.$main-text, $lightness: 70%);
     }
   }
 }
