--- a/src/pages/Feedback/FeedbackPage.module.scss
+++ b/src/pages/Feedback/FeedbackPage.module.scss
@@ -1,4 +1,5 @@
 @use "../../styles/variables";
+@use "sass:color";
 
 
 .feedbackPage {
@@ -102,14 +103,14 @@
 
       
       &::placeholder{
-          color: lighten(variables.$main-text, 70);
+          color: color.adjust($color:variables.$main-text, $lightness: 70%);
       }
     }
   }
 }
 
 .projectBlock{
-  background-color: darken(variables.$header-background, 5);
+  background-color: color.adjust($color:variables.$header-background, $lightness: -5%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -120,7 +121,7 @@
   cursor: pointer;
 
   &:hover{
-    background-color: darken(variables.$sidebar-background, 5);
+    background-color: color.adjust($color:variables.$sidebar-background, $lightness: -5%);
   }
 
   .projectCard {
