--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -21,9 +21,10 @@
         margin-inline:40px;
 
         display: flex;
-        gap:20px;
+        gap:35px;
 
         .tabItem{
+            position: relative;
             background-color: color.adjust($color:variables.$main-background, $lightness: -10%);
             padding-top: 8px;
             padding-inline: 10px;
@@ -31,26 +32,76 @@
             margin-bottom: -20px;
 
             cursor: pointer;
-            min-width: 80px;
+            min-width: 100px;
 
-            border-top-left-radius: 5px;
-            border-top-right-radius: 5px;
+            border-top-left-radius: 8px;
+            border-top-right-radius: 8px;
+            border-bottom: none;
 
             text-decoration: none;
             color:variables.$main-text;
 
-            z-index: 10;
+            z-index: 4;
 
             &.active{
                 background-color: variables.$main-background;
+                z-index: 10;
+
+                .leftCurvedEdge, .rightCurvedEdge{
+                    background-color: variables.$main-background;
+                }
 
                 &:hover{
                     background-color: color.adjust($color:variables.$main-background, $lightness: -5%);
+                    
+                    .leftCurvedEdge, .rightCurvedEdge{
+                        background-color: color.adjust($color:variables.$main-background, $lightness: -5%);
+                    }
                 }
+            }
+
+            &::before, &::after {
+                content: "";
+                position: absolute;
+                z-index: 0;
+
+                bottom: 11.8px;
+                width: 23px;
+                height: 23px;
+                border-radius: 100%;
+                background-color: variables.$header-background;
+            }
+        
+            &::before { left: -22.9px; }
+            &::after  { right: -22.9px; }
+
+            @mixin curvedEdge(){
+                position: absolute;
+                bottom: 10px;
+
+                width: 15px;
+                height: 15px;
+
+                background-color: color.adjust($color:variables.$main-background, $lightness: -10%);
+                z-index: -1
+            }
+
+            .leftCurvedEdge{
+                @include curvedEdge();
+                left: -8px;               
+            }
+
+            .rightCurvedEdge{
+                @include curvedEdge();
+                right: -8px;
             }
 
             &:hover{
                 background-color: color.adjust($color:variables.$main-background, $lightness: -25%);
+
+                .leftCurvedEdge, .rightCurvedEdge{
+                    background-color: color.adjust($color:variables.$main-background, $lightness: -25%);
+                }
             }
         }
     }
